# echeck

./: .clang-format  .ctags  .editorconfig  .gitignore  .indent.pro  .travis.yml  CMakeLists.txt  CuTest.c  CuTest.h  Makefile  README.md  README.txt  befehle.txt  changelog.txt  config.h  echeck.c  echeck.h  echeck.nsi  echeck.sln  echeck.vcproj  echeck.vcxproj  echeck.vcxproj.filters  echeckw.c  main.c  tests.c  unicode.c  unicode.h  update-locale.sh
.github/workflows/: distribute-latest.yml
de/: LIESMICH.txt  befehle.txt  dinge.txt  gebaeude.txt  hilfe.txt  items.txt  kraeuter.txt  meldungen.txt  optionen.txt  parameter.txt  rassen.txt  richtungen.txt  schiffe.txt  talente.txt  traenke.txt  zauber.txt
debian/: changelog  control  install  rules
e2/de/: commands.txt  help.txt  items.txt  messages.txt  parameters.txt
e2/en/: buildings.txt  commands.txt  items.txt  messages.txt  parameters.txt
e2/test/: echeck_errors.template  echeck_output.template  orders.test.txt
e3/de/: commands.txt  help.txt  items.txt  messages.txt  options.txt  parameters.txt
e3/en/: buildings.txt  commands.txt  help.txt  items.txt  messages.txt  parameters.txt  potions.txt
e3/test/: echeck_errors.template  echeck_output.template  orders.test.txt
en/: README.txt  buildings.txt  commands.txt  directions.txt  help.txt  herbs.txt  items.txt  messages.txt  options.txt  params.txt  potions.txt  races.txt  ships.txt  skills.txt  spells.txt
locale/: echeck.pot
locale/de/: echeck.po
locale/de/LC_MESSAGES/: echeck.mo
po/: POTFILES.in  echeck.de.po  echeck.pot
po/de/: echeck.po
s/: build  deb-build
