cmake_minimum_required(VERSION 2.8)
project (echeck C)

add_executable(echeck echeck.c unicode.c)
add_executable(tests echeck.c unicode.c tests.c CuTest.c)
target_compile_definitions (tests PRIVATE TESTING=1)

find_package(Intl)
include_directories(${Intl_INCLUDE_DIR})

if (Intl_FOUND)
target_compile_definitions (echeck PRIVATE HAVE_GETTEXT=1)
target_compile_definitions (tests PRIVATE HAVE_GETTEXT=1)
if (Intl_LIBRARIES)
target_link_libraries(echeck ${Intl_LIBRARIES})
target_link_libraries(tests ${Intl_LIBRARIES})
else ()
find_library(LIBINTL_LIBRARY NAMES libintl intl)
target_link_libraries(echeck ${LIBINTL_LIBRARY})
target_link_libraries(tests ${LIBINTL_LIBRARY})
endif ()
else (Intl_FOUND)
message(STATUS "libintl not found")
endif (Intl_FOUND)
